<resources>
    <string name="app_name">Tasks2Do</string>

    <string name="pattern_date">dd.MM.yyyy</string>
    <string name="pattern_time">HH:mm</string>

    <string name="channel_name">Tasks2Do</string>
    <string name="channel_description">All your Tasks in one place!</string>

    <string name="completed">COMPLETED</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="new_task">New Task</string>
    <string name="add_details">Add Details</string>
    <string name="add_datetime">Add date/time</string>
    <string name="add_time">Add time</string>
    <string name="enter_title">Enter Title</string>
    <string name="create_list">Create new list</string>
    <string name="user">User</string>
    <string name="login_for_cloud_save">Login for cloud saving</string>
    <string name="login_to_save_to_cloud">Login to enable cloud saving</string>
    <string name="rename_list">Rename list</string>
    <string name="delete_list">Delete list</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="change">Change</string>
    <string name="change_user">Change user</string>
    <string name="logout">Log out</string>
    <string name="login">Log in</string>
    <string name="signin">Sign in</string>
    <string name="location_of_last_edit">location of last edit:</string>
    <string name="not_available">not available</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>

    <string name="settings">Settings</string>

    <string name="theme">Theme</string>
    <string name="theme_key">theme</string>
    <string name="darkmode">Dark</string>
    <string name="darkmode_val">dark</string>
    <string name="lightmode">Light</string>
    <string name="lightmode_val">light</string>
    <string name="system">System default</string>
    <string name="system_val">system</string>

    <string name="notifications">Tasks2Do</string>
    <string name="notifications_key">All your Tasks in one place!</string>

    <string name="filename">Tasks2Do.save</string>
    <string name="first_load">first_load</string>
    <string name="username_key">username</string>
    <string name="password_key">password</string>

</resources>